src/objects/InstitutionTrialDcc__c.object
<CustomObject>
    <fields>
        <fullName>DCC_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DCC Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>InstitutionTrialDccs (DCC Id)</relationshipLabel>
        <relationshipName>InstitutionTrialDccs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Institution_Id__c</fullName>
        <label>Institution Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>InstitutionTrialDccs</relationshipLabel>
        <relationshipName>InstitutionTrialDccs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trial_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Name</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>InstitutionTrialDccs</relationshipLabel>
        <relationshipName>InstitutionTrialDccs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>InstitutionTrialDcc</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InstitutionTrialDccs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>